# Recepie_Heirloom_Vault_MCP_Server

./: .env.example  .gitignore  COMMANDS.txt  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
app/: embeddings.py  story.py
app/config/: settings.py
app/database/: connection.py  embeddings.py  recipes.py  schema.py
app/mcp/: server.py
app/mcp/tools/: food_image.py  recipe_story.py  recipes.py
migrations/: 001_add_recipe_story.sql
scripts/: test_db.py
