[project]
name = "recipe-heirloom-vault-mcp"
version = "0.1.0"
description = "Family Recipe Heirloom Vault MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastmcp>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
